name:                hlibsass-test
version:             0.1.0.0
license-file:        LICENSE
author:              Bryan Richter
maintainer:          b@chreekat.net
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Test
  build-depends:       base >=4.8, hlibsass
  default-language:    Haskell2010
